# llm-product-demo

./: .gitignore  .mcp.json  README.md  a  pyrightconfig.json
.claude/skills-test/login/: SKILL.md
mcp/: .gitignore  pyproject.toml  requirements.txt
mcp-test/: api-test.http  demo-test.http  starlette-demo-test.http  wolf-backend-mcp-test.http
mcp/src/: app.py  demo.py  mcp_session.py  rsa_test.py  rsa_util.py  starlette-demo.py  wolf_backend_mcp.py  wolf_response.py
mcp/src/server/: server_context.py
mcp/src/service/: base_service.py  login_service.py  segment_service.py
mcp/tests/: test_app.py  test_rsa_util.py  test_wolf_backend_mcp.py
mcp/tests/service/: test_login_service.py
